2009-06-28  Andreas Schwab  <schwab@linux-m68k.org>

	* process.c (send_process): Keep decoded string in a local
	variable and protect it from GC.  (Bug#3521)

2009-06-28  Eli Zaretskii  <eliz@gnu.org>

	* term.c (create_tty_output) [MSDOS]: #ifdef away.
	(tty_free_frame_resources) [MSDOS]: Add a DOS-specific version.

2009-06-28  Chong Yidong  <cyd@stupidchicken.com>

	* xdisp.c (start_display, handle_face_prop)
	(move_it_vertically_backward, cursor_row_fully_visible_p)
	(redisplay_window, try_window_id, produce_image_glyph): Delete
	some #ifdef-ed out code chunks that are now obsolete.

	* xterm.c (x_update_window_begin, x_new_focus_frame)
	(x_scroll_bar_handle_click, handle_one_xevent)
	(handle_one_xevent, XTread_socket, x_focus_on_frame)
	(x_make_frame_visible, x_make_frame_invisible)
	(x_wm_set_icon_pixmap, x_initialize): Delete some #ifdef-ed out
	code chunks that are now obsolete.

2009-06-28  Michael Albinus  <michael.albinus@gmx.de>

	* dbusbind.c (XD_SYMBOL_TO_DBUS_TYPE): Convert macro into function
	xd_symbol_to_dbus_type.  With Solaris 2.11, it was said to compile
	for hours, when optimzation is enabled.
	(xd_signature, xd_append_arg, xd_retrieve_arg, xd_initialize)
	(xd_read_message): Make them static.

2009-06-27  Chuck Blake  <cblake@pdos.csail.mit.edu>  (tiny change)

	* term.c (turn_on_face): Allow simultaneously bold and dim
	terminal faces (Bug#3530).

2009-06-27  Chong Yidong  <cyd@stupidchicken.com>

	* frame.c (x_get_arg): Check if dpyinfo is non-NULL.

	* xdisp.c (mouse_face_from_buffer_pos): Fix detection of
	truncation glyphs (Bug#3686).

2009-06-27  Glenn Morris  <rgm@gnu.org>

	* m/pmax.h: Restore file, with only netbsd portions.

2009-06-26  David Reitter <david.reitter@gmail.com>

	* nsterm.m (keydown): Avoid infinite loop.

2009-06-26  Peter Jolly  <peter@jollys.org>  (tiny change)

	* ftfont.c (get_adstyle_property): Call font_intern_prop with 1 as
	the arg FORCE_SYMBOL.

2009-06-25  Kenichi Handa  <handa@m17n.org>
